--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 POSTGRESS_USER = 
 DB_PASSWORD = 
 DB_NAME = 
+SSL_MODE = False 
 # Its possible to also give the database url directly, comment out line 21 in main.py in this case
 # DATABASE_URL = postgres://POSTGRESS_USER:DB_PASSWORD@localhost:5432/DB_NAME
 # If you need sslmode use this
 # DATABASE_URL = postgres://POSTGRESS_USER:DB_PASSWORD@localhost:5432/DB_NAME?sslmode=require
-SSL_MODE = False 
 
 DISCORD_SECRET = 
 
 # live version wont have .env so this variable should become None
+DEV_MODE = True
 GUILD_IDS = 
