--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
-DB_USER = 
-DB_PASSWORD = 
-DB_NAME = 
-# If you need sslmode use this
-SSL_MODE = False 
-# Its possible to also give the database url directly, comment out line 21 in main.py in this case
-# DATABASE_URL = postgres://POSTGRESS_USER:DB_PASSWORD@localhost:5432/DB_NAME
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-DISCORD_SECRET = 
+# To enable SSL when connecting to the database, use this
+SSL_MODE=True
 
-# live version wont have .env so this variable should become None
-DEV_MODE = True
-GUILD_IDS = 
+# Use this line if you want to provide the URL directly
+# DATABASE_URL=postgres://DB_USER:DB_PASSWORD@localhost:5432/DB_NAME
+
+DISCORD_SECRET=
+
+# Debug settings
+DEV_MODE=True
+GUILD_IDS=
