--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ SSL_MODE=True
 
 DISCORD_SECRET=
 
+# Enter the server id here if you want the bot to update usernames automatically
+# To use this, you need to enable the Server Members Intent on the Developer portal
+SERVER_ID=
+
 # Debug settings
 DEV_MODE=True
 GUILD_IDS=
